--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/</item>
         <item>@font/alata</item>
         <item>@font/corben</item>
+        <item>@font/lato</item>
         <item>@font/lato_bold</item>
         <item>@font/montserrat_extrabold</item>
     </array>
