--- a/app/src/main/res/layout/fragment_baneasa_parking.xml
+++ b/app/src/main/res/layout/fragment_baneasa_parking.xml
@@ -59,7 +59,7 @@
         android:onClick="reserveOnClickRed"
         android:text="C 10"
         app:layout_constraintStart_toEndOf="@+id/button26"
-        tools:layout_editor_absoluteY="266dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button88" />
 
     <Button
         android:id="@+id/button56"
