--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -27,7 +27,7 @@
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@mipmap/ic_launcher_round_png" />
+        app:srcCompat="@mipmap/ic_launcher_round_png" />
 
     <TextView
         android:id="@+id/textViewName"
