--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -4,114 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fundalnou"
-    android:orientation="horizontal"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".NavigationFragments.MainPageFragment">
 
-
-    <TextView
-        android:id="@+id/textView"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="108dp"
-        android:fontFamily="@font/lato_bold"
-        android:text="Choose your next destination!"
-        android:textAlignment="center"
-        android:textSize="24sp"
+        android:layout_marginTop="780dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="3dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="openDestinationFragmentOnClick"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.gridlayout.widget.GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginEnd="4dp"
-        app:columnCount="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:rowCount="4">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="205dp"
-            android:layout_height="200dp"
-            android:background="@drawable/background"
-            app:cardCornerRadius="50dp"
-            app:layout_column="0"
-            app:layout_row="0">
-
-            <ImageButton
-                android:id="@+id/imageButton10"
-                android:layout_width="205dp"
-                android:layout_height="200dp"
-                android:background="@drawable/background"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:onClick="openSunPlazaParkFragmentOnClick"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/sunplaza"
-                tools:ignore="SpeakableTextPresentCheck" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="205dp"
-            android:layout_height="200dp"
-            app:cardCornerRadius="50dp"
-            app:layout_column="0"
-            app:layout_row="1">
-
-            <ImageButton
-                android:id="@+id/imageButton9"
-                android:layout_width="205dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/fundalnou"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:onClick="openFragmentMegaMallOnClick"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/megamall"
-                tools:layout_editor_absoluteX="1dp"
-                tools:layout_editor_absoluteY="202dp" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="205dp"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="50dp"
-            app:layout_column="1"
-            app:layout_row="0">
-
-            <ImageButton
-                android:id="@+id/imageButton5"
-                android:layout_width="205dp"
-                android:layout_height="200dp"
-                android:background="@drawable/background"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:onClick="openFragmentAfiOnClick"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/afi" />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="205dp"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="50dp"
-            app:layout_column="1"
-            app:layout_row="1">
-
-            <ImageButton
-                android:id="@+id/imageButton8"
-                android:layout_width="205dp"
-                android:layout_height="200dp"
-                android:background="@drawable/background"
-                android:foreground="?attr/selectableItemBackgroundBorderless"
-                android:onClick="openBaneasaFragmentOnClick"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/baneasa" />
-        </androidx.cardview.widget.CardView>
-
-    </androidx.gridlayout.widget.GridLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
